@startuml
' ==========================================================
' Packages and core components
' ==========================================================
note as N1
# Créer le selecteur en fonction de l'entité souhaitée
region_selector = SelectorFactory.create_selector(Region)

# Recherche la liste des entités
region_by_name = region_selector.select("Bretagne")
region_by_code = region_selector.select("53")

# Récupère la géométrie de l'entité
region_geom = region_by_code[0].get_geometry()

# Ou récupère directement la geometry sans sélectionner explicitement d'entité
region_geom = region_selector.get_geometry("53")
end note

    class "ApiError" as ApiError << (E,red) >> {
        +__init__(message: str, url: str | None = None)
    }

    interface "RequestTemplate" as RequestTemplate << (I,orange) >> {
        +SERVICE: str
        +VERSION: str
        +REQUEST: str
        +OUTPUTFORMAT: str
        +build(typename: str, propertyname: str, cql: str | None, extra: dict): dict
    }

    class "RequestBuilder" as RequestBuilder << (B,lightblue) >> {
        +get_request_builder(config: dict): Callable
    }

    class "ApiClient" as ApiClient << (C,lightgreen) >> {
        -config: dict
        -builder: Callable
        +search(entity: str, mode: str, **values): list
        +fetch_geometry(entity: str, **values): dict
    }

    class "apis.json" as ApisConfig << (J,violet) >> {
    }
    note right of ApisConfig
        Correspond au fichier JSON.
        « User » : édite ce fichier pour configurer les entités
    end note

    abstract class "GeoEntity" as GeoEntity << (A,gray) >> {
        +code: str
        -_geometry: dict
        -_service: GeoService
        +get_geometry(force: bool): dict
    }
    note right of GeoEntity
        « User » : appelle get_geometry() sur une GeoEntity
    end note
    
    class "GeoService" as GeoService << (S,yellow) >> {
        -client: ApiClient
        +search_entities(...): list
        +fetch_entity_geometry(...): dict
    }

    class "OperationSelector" as OperationSelector << (O,pink) >> {
        +choose(args: Tuple, cfg: dict): str
    }
    
    class "HandlerRegistry" as HandlerRegistry << (H,pink) >> {
        +init(service: GeoService): None
        +get(entity_key: str, operation: str): Callable
    }
    
    class "SelectorImpl" as SelectorImpl << (L,lightgray) >> {
        -entity_cls: Type
        -service: GeoService
        +select(...): list
        +get_geometry(...): dict
    }
    note right of SelectorImpl
        « User » : appelle select() ou get_geometry() sur le sélecteur
    end note

    class "SelectorFactory" as SelectorFactory << (F,brown) >> {
        -_services: dict
        +create_selector(entity_cls: Type): SelectorImpl
        +reset(): None
    }
    note right of SelectorFactory
        « User » : crée un sélecteur via create_selector()
    end note

' ==========================================================
' Relations (exhaustive, with function names)
' ==========================================================
ApiClient --> RequestTemplate : uses\nbuild
ApiClient --> RequestBuilder : uses\nget_request_builder
ApiClient --> ApisConfig : loads config\n"load_api_config"
ApiClient --> ApiError : raises

GeoService --> ApiClient : uses\nsearch / fetch_geometry
GeoService --> GeoEntity : instantiates via\nentity_cls.from_api
GeoService --> ApisConfig : accesses\nclient.config

SelectorImpl --> GeoService : uses\nservice._entity_key / service.client.search
SelectorImpl --> HandlerRegistry : uses\nHandlerRegistry.get
SelectorImpl --> OperationSelector : uses\nOperationSelector.choose
SelectorImpl --> GeoEntity : returns list of\nGeoEntity instances

SelectorFactory --> SelectorImpl : creates
SelectorFactory --> GeoService : caches

HandlerRegistry --> GeoService : init\nHandlerRegistry.init
HandlerRegistry --> ApisConfig : reads\nservice.client.config['entities']
OperationSelector --> ApisConfig : reads\nentity configuration

ApisConfig --> GeoEntity : définit le schéma d'entité utilisé par\nGeoService pour créer les instances via\nentity_cls.from_api

ApiError ..> ApiClient : rethrown
@enduml
